# -task-management-api

./: .gitignore  DEMO_PRACTICE_GUIDE.md  DEMO_QUICK_REFERENCE.md  DEMO_STORYBOARD.md  DEMO_VIDEO_SCRIPT.md  PROJECT_SUMMARY.md  README.md  SUBMISSION_CHECKLIST.md  api-feature-workflow.skill  tdd-workflow.skill
.claude/skills/: fastapi.skill
.claude/skills/api-feature-workflow/: SKILL.md
.claude/skills/fastapi/: SKILL.md
.claude/skills/fastapi/assets/project-template/: .env.example  README.md  main.py  requirements.txt
.claude/skills/fastapi/assets/project-template/app/api/v1/: api.py
.claude/skills/fastapi/assets/project-template/app/api/v1/endpoints/: items.py
.claude/skills/fastapi/assets/project-template/app/core/: config.py
.claude/skills/fastapi/assets/project-template/app/crud/: item.py
.claude/skills/fastapi/assets/project-template/app/db/: database.py
.claude/skills/fastapi/assets/project-template/app/models/: __init__.py  item.py
.claude/skills/fastapi/assets/project-template/app/schemas/: item.py
.claude/skills/fastapi/assets/project-template/tests/: test_items.py
.claude/skills/fastapi/examples/: README.md  crud_database_example.py
.claude/skills/fastapi/references/: api-documentation.md  crud-patterns.md  database-integration.md  project-structure.md
.claude/skills/fastapi/scripts/: init_project.py
.claude/skills/tdd-workflow/: SKILL.md
task-api/: .env.example  README.md  main.py  pyproject.toml
task-api/tests/: __init__.py  conftest.py  test_tasks.py
